update output name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,11 @@ ELSE(USE_VANILLA_HW)
     SET(EXTENSION "${EXTENSION}_mod")
 ENDIF(USE_VANILLA_HW)
 
+IF(USE_FNIRSI_BUTTON)
+    SET(EXTENSION "${EXTENSION}_fnirsi") 
+    SET(USE_ROTARY_FULL_STEP True CACHE INTERNAL "")
+ENDIF()
+
 IF(USE_ROTARY_FULL_STEP)
     SET(EXTENSION "${EXTENSION}_fstep")
 ELSE(USE_ROTARY_FULL_STEP)
@@ -89,7 +94,7 @@ SET(USE_TRIGGER True)
 #  Display
 #_______________________
 IF(USE_SMALLFOOTPRINT)
-  
+    SET(EXTENSION "${EXTENSION}_small") 
 ELSE()
   SET(DSO_EXTRA_LIB simplerILI9341HS)
   SET(SIMPLER_ILI9341_FONT_COMPRESSION ON CACHE INTERNAL "")
