--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,27 +1,36 @@
 {
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
       {
-        "armToolchainPath" : "/home/fx/Arduino_stm32/arm-gcc-2020q4/bin/",
-        "svdFile" : "${workspaceRoot}/.vscode/STM32F103.svd",
-        "name": "BMP attach",
-        "cwd": "${workspaceRoot}",
-        "executable": "${workspaceRoot}/build/lnDSO_M3_mod_hstep_72M.elf",
-        "request": "launch",
-        "type": "cortex-debug",
-        "servertype": "bmp",
-        "interface": "swd",
-        "device": "STM32F103",
-        "BMPGDBSerialPort" : "/dev/ttyBmpGdb",
-        "runToMain": true,
-        "preLaunchCommands":[
-        "b deadEnd",
-        "set mem inaccessible-by-default off",
-        "set confirm off"
-        ],
-        "preRestartCommands": [
-        "enable breakpoint",
-        "break main"
-        ]
-        }
+          "name": "Cortex Debug",
+          "cwd": "${workspaceFolder}",
+          "armToolchainPath" : "/home/fx/Arduino_stm32/arm-gcc-2021q4/bin/",
+          "svdFile" : "${workspaceRoot}/.vscode/STM32F103.svd",              
+          //"executable": "buildF3/lnDSO_M4_mod_hstep_96M_USB.elf",
+          //"executable": "buildF3/lnDSO_M4_mod_hstep_96M_USB.elf",
+          "executable": "buildFNIRSI/lnDSO_M3_mod_fnirsi_fstep_72M_small.elf",
+
+          "request": "launch",
+          "type": "cortex-debug",
+          "runToEntryPoint": "main",
+          "servertype": "bmp",
+          "interface": "swd",
+          "device": "STM32F103",
+          "BMPGDBSerialPort" : "/dev/ttyBmpGdb",
+          "runToMain": true,
+          "preLaunchCommands":[
+          "b deadEnd",
+          "set mem inaccessible-by-default off",
+          "set confirm off"
+          ],
+          "preRestartCommands": [
+          "enable breakpoint",
+          "break main"
+          ]
+
+      }
+  ]                                                                         
 }
