add support for clang, arm:disable qfp when clang is used

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ MESSAGE(STATUS "===============")
 # Options
 #____________________
 
+#SET(USE_CLANG      ON  CACHE INTERNAL "")
+#SET(LN_LTO "-flto")
 SET(LN_ENABLE_I2C  OFF CACHE INTERNAL "")
 SET(LN_ENABLE_SPI  OFF CACHE INTERNAL "")
 SET(LN_USB_NB_CDC  1 CACHE INTERNAL "")
@@ -85,7 +87,10 @@ IF("${LN_ARCH}" STREQUAL "RISCV")
     SET(FP_LIB rvfp)
 ELSEIF("${LN_ARCH}" STREQUAL "ARM")
     IF("${LN_MCU}" STREQUAL "M3")
-        SET(FP_LIB qfpm3)
+        IF(USE_CLANG)
+        ELSE(USE_CLANG)
+            SET(FP_LIB qfpm3)
+        ENDIF(USE_CLANG)
     ENDIF("${LN_MCU}" STREQUAL "M3")
 ENDIF("${LN_ARCH}" STREQUAL "RISCV")
 ADD_SUBDIRECTORY(fp)
@@ -102,10 +107,10 @@ ELSE()
   SET(SIMPLER_ILI9341_FONT_COMPRESSION ON CACHE INTERNAL "")
   SET(SIMPLER_ILI9341_2BPP_SUPPORT     ON CACHE INTERNAL "")
 ENDIF()
-include_directories(externals/simplerILI9341/platformExample/lnArduino)
+include_directories(externals/simplerILI9341/cpp/platformExample/lnArduino)
 SET(ILI9341_DRIVER  platformExample/lnArduino/ili_ln8bits.cpp)
-ADD_SUBDIRECTORY(externals/simplerILI9341)
-include_directories(externals/simplerILI9341)
+ADD_SUBDIRECTORY(externals/simplerILI9341/cpp)
+include_directories(externals/simplerILI9341/cpp)
 #
 include_directories(capture)
 USE_LIBRARY(NeVerMind)
