enable clang + lto by default, update lnArduino and simplerILI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,8 @@ MESSAGE(STATUS "===============")
 # Options
 #____________________
 
-#SET(USE_CLANG      ON  CACHE INTERNAL "")
-#SET(LN_LTO "-flto")
+SET(USE_CLANG      ON  CACHE INTERNAL "")
+SET(LN_LTO "-flto")
 SET(LN_ENABLE_I2C  OFF CACHE INTERNAL "")
 SET(LN_ENABLE_SPI  OFF CACHE INTERNAL "")
 SET(LN_USB_NB_CDC  1 CACHE INTERNAL "")
