usb : preparing to connect main loop and usb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ MESSAGE(STATUS "===============")
 SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 SET(USE_CLANG      ON  CACHE INTERNAL "")
-#SET(LN_LTO "-flto")
+SET(LN_LTO "-flto")
 SET(LN_ENABLE_I2C  OFF CACHE INTERNAL "")
 SET(LN_ENABLE_SPI  OFF CACHE INTERNAL "")
 SET(LN_USB_NB_CDC  1 CACHE INTERNAL "")
