build: increase initial stack to 1500

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,8 @@ MESSAGE(STATUS "===============")
 #____________________
 SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-SET(USE_CLANG      ON  CACHE INTERNAL "")
-SET(LN_LTO "-flto")
+#SET(USE_CLANG      ON  CACHE INTERNAL "")
+#SET(LN_LTO "-flto")
 SET(LN_ENABLE_I2C  OFF CACHE INTERNAL "")
 SET(LN_ENABLE_SPI  OFF CACHE INTERNAL "")
 SET(LN_USB_NB_CDC  1 CACHE INTERNAL "")
@@ -34,9 +34,11 @@ IF(USE_NO_DEFAULT)
 ELSE()
 #SET(USE_SMALLFOOTPRINT TRUE CACHE INTERNAL "")
 #SET(LN_LTO "-flto" CACHE INTERNAL "")
-#SET(USE_GD32F3 TRUE CACHE INTERNAL "")
-  SET(USE_SMALLFOOTPRINT       TRUE CACHE INTERNAL "")
-  SET(USE_FNIRSI_BUTTON TRUE CACHE INTERNAL "")
+SET(USE_CLANG True CACHE INTERNAL "")
+SET(USE_GD32F3 TRUE CACHE INTERNAL "")
+#  SET(USE_SMALLFOOTPRINT       TRUE CACHE INTERNAL "")
+  SET(USE_GD32F3               TRUE CACHE INTERNAL "")
+  #SET(USE_FNIRSI_BUTTON TRUE CACHE INTERNAL "")
 ENDIF()
 
 
@@ -53,6 +55,9 @@ enable_language(C CXX ASM) # this is important too!
 
 include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/include)
+
+SET(LN_INITIAL_STACK_SIZE 1500 CACHE INTERNAL "") # Need a larger stack than default
+
 add_subdirectory(${AF_FOLDER})
 
 include(${AF_FOLDER}/setup.cmake)
