main: merge main task and init task

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ IF(USE_NO_DEFAULT)
 
 ELSE()
 #SET(USE_SMALLFOOTPRINT TRUE CACHE INTERNAL "")
-#SET(LN_LTO "-flto" CACHE INTERNAL "")
+SET(LN_LTO "-flto" CACHE INTERNAL "")
 SET(USE_CLANG True CACHE INTERNAL "")
 SET(USE_GD32F3 TRUE CACHE INTERNAL "")
 #  SET(USE_SMALLFOOTPRINT       TRUE CACHE INTERNAL "")
@@ -56,7 +56,8 @@ enable_language(C CXX ASM) # this is important too!
 include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
-# SET(LN_INITIAL_STACK_SIZE 3000 CACHE INTERNAL "")
+SET(LN_INITIAL_STACK_SIZE 1600 CACHE INTERNAL "")
+SET(LN_INITIAL_TASK_PRIORITY 4 CACHE INTERNAL "")
 
 add_subdirectory(${AF_FOLDER})
 
