add rust skeleton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,6 @@ cmake_policy(SET CMP0079 NEW)
 #____________________
 SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-SET(LN_ENABLE_I2C  OFF CACHE INTERNAL "")
-SET(LN_ENABLE_SPI  OFF CACHE INTERNAL "")
 
 OPTION(USE_ROTARY_FULL_STEP     "Use full step for rotary encoder, else half step"  FALSE)
 OPTION(USE_USB                  "Enable USB support"                                FALSE)
@@ -38,7 +36,9 @@ SET(LN_USB_DFU_RUNTIME 1 CACHE INTERNAL "")
 
 
 SET(LN_ENABLE_I2C   FALSE CACHE INTERNAL "")
-SET(LN_ENABLE_SPI   TRUE CACHE INTERNAL "")
+SET(LN_ENABLE_SPI   FALSE CACHE INTERNAL "")
+SET(LN_ENABLE_UART  FALSE CACHE INTERNAL "")
+SET(LN_ENABLE_RUST  TRUE  CACHE INTERNAL "")
 
 
 IF(LN_ENABLE_USBD)
@@ -164,6 +164,8 @@ ENDIF()
 # Build
 #____________________
 GENERATE_GD32_FIRMWARE(lnDSO)
+TARGET_LINK_LIBRARIES( lnDSO  lnarduino_c_bindings)
+TARGET_LINK_LIBRARIES( lnDSO  rsdso)
 TARGET_LINK_LIBRARIES( lnDSO  captureLib )
 TARGET_LINK_LIBRARIES( lnDSO  sourceLib )
 IF(LN_ENABLE_USBD)
