make rust optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ SET(LN_USB_DFU_RUNTIME 1 CACHE INTERNAL "")
 SET(LN_ENABLE_I2C   FALSE CACHE INTERNAL "")
 SET(LN_ENABLE_SPI   FALSE CACHE INTERNAL "")
 SET(LN_ENABLE_UART  FALSE CACHE INTERNAL "")
-SET(LN_ENABLE_RUST  TRUE  CACHE INTERNAL "")
+SET(LN_ENABLE_RUST  FALSE CACHE INTERNAL "")
 
 
 IF(LN_ENABLE_USBD)
@@ -164,8 +164,11 @@ ENDIF()
 # Build
 #____________________
 GENERATE_GD32_FIRMWARE(lnDSO)
-TARGET_LINK_LIBRARIES( lnDSO  lnarduino_c_bindings)
-TARGET_LINK_LIBRARIES( lnDSO  rsdso)
+
+IF(LN_ENABLE_RUST)
+  TARGET_LINK_LIBRARIES( lnDSO  lnarduino_c_bindings)
+  TARGET_LINK_LIBRARIES( lnDSO  rsdso)
+ENDIF()
 TARGET_LINK_LIBRARIES( lnDSO  captureLib )
 TARGET_LINK_LIBRARIES( lnDSO  sourceLib )
 IF(LN_ENABLE_USBD)
